@@ -10,6 +10,7 @@ import java.util.Iterator;
 import ch.ehi.basics.types.NlsString;
 import ch.ehi.basics.i18n.MessageFormat;
 import ch.ehi.basics.logging.EhiLogger;
+import ch.ehi.uml1_4.foundation.datatypes.OrderingKind;
 import ch.ehi.uml1_4.foundation.extensionmechanisms.TaggedValue;
 import ch.ehi.umleditor.interlis.iliexport.TransferFromUmlMetamodel;
 
@@ -17,6 +18,7 @@ public class TransferFromIli2cMetamodel
 {
 	public static final String TAGGEDVALUE_ILI_PREFIX="ili:";
 	private final boolean unwrapMultiValueStructAttrs=true;
+	private final boolean iliAttrsAsUmlAttrs=true;
 	
 	public TransferFromIli2cMetamodel(){
   }
@@ -469,51 +471,57 @@ public class TransferFromIli2cMetamodel
   private void visitAttribute(AttributeDef attrib,int attrIdx)
   {
     Type btype=attrib.getDomain();
+    boolean isMultiValueAttr=false;
     if(btype instanceof CompositionType){
     	if(unwrapMultiValueStructAttrs && isMultiValueAttributeWrapper(btype)){
     		// map as a UML attribute (see further down)
+    		isMultiValueAttr=true;
     	}else{
             // StructureAttribute
             CompositionType type=(CompositionType)btype;
-            ch.ehi.interlis.associations.AssociationDef assoc=new ch.ehi.interlis.associations.AssociationDef();
-            ch.ehi.interlis.modeltopicclass.ClassDef dest=findClassDef((Table)type.getComponentType());
-            ch.ehi.uml1_4.foundation.core.Class thisclass=(ch.ehi.uml1_4.foundation.core.Class)getNamespace();
-            assoc.setName(new NlsString(modelLanguage,thisclass.getDefLangName()+dest.getDefLangName()));
-            ch.ehi.interlis.associations.RoleDef destRole=new ch.ehi.interlis.associations.RoleDef();
-            destRole.setName(new NlsString(modelLanguage,attrib.getName()));
-    		// documentation
-    		String ilidoc=attrib.getDocumentation();
-    		if(ilidoc!=null){
-    			destRole.setDocumentation(new NlsString(modelLanguage,ilidoc));
-    		}
-    		// meta values
-    		visitMetaValues(destRole,attrib.getMetaValues());
-            destRole.attachParticipant(dest);
-            destRole.setMultiplicity(visitCardinality(type.getCardinality()));
-            destRole.setOrdering(type.isOrdered()?ch.ehi.uml1_4.foundation.datatypes.OrderingKind.ORDERED:ch.ehi.uml1_4.foundation.datatypes.OrderingKind.UNORDERED);
-            destRole.setIliAttributeIdx(attrIdx);
-            destRole.setPropExtended(attrib.getExtending()!=null);
-            assoc.addConnection(destRole);
-            ch.ehi.interlis.associations.RoleDef srcRole=new ch.ehi.interlis.associations.RoleDef();
-            srcRole.attachParticipant(thisclass);
-            srcRole.setName(thisclass.getName());
-            srcRole.setAggregation(ch.ehi.uml1_4.foundation.datatypes.AggregationKind.COMPOSITE);
-            srcRole.setIliAttributeKind(ch.ehi.interlis.associations.AssociationAsIliAttrKind.STRUCTURE);
-    		ch.ehi.uml1_4.implementation.UmlMultiplicityRange r=new ch.ehi.uml1_4.implementation.UmlMultiplicityRange();
-    		r.setLower(0);
-    		r.setUpper(1);
-    		ch.ehi.uml1_4.implementation.UmlMultiplicity m=new ch.ehi.uml1_4.implementation.UmlMultiplicity();
-    		m.addRange(r);
-    		srcRole.setMultiplicity(m);
-            assoc.addConnection(srcRole);
-            java.util.Iterator rIt=type.iteratorRestrictedTo();
-            while(rIt.hasNext()){
-              destRole.addRestriction(findClassDef((Table)rIt.next()));
+            if(iliAttrsAsUmlAttrs){
+        		// map as a UML attribute (see further down)
+            }else{
+                ch.ehi.interlis.associations.AssociationDef assoc=new ch.ehi.interlis.associations.AssociationDef();
+                ch.ehi.interlis.modeltopicclass.ClassDef dest=findClassDef((Table)type.getComponentType());
+                ch.ehi.uml1_4.foundation.core.Class thisclass=(ch.ehi.uml1_4.foundation.core.Class)getNamespace();
+                assoc.setName(new NlsString(modelLanguage,thisclass.getDefLangName()+dest.getDefLangName()));
+                ch.ehi.interlis.associations.RoleDef destRole=new ch.ehi.interlis.associations.RoleDef();
+                destRole.setName(new NlsString(modelLanguage,attrib.getName()));
+        		// documentation
+        		String ilidoc=attrib.getDocumentation();
+        		if(ilidoc!=null){
+        			destRole.setDocumentation(new NlsString(modelLanguage,ilidoc));
+        		}
+        		// meta values
+        		visitMetaValues(destRole,attrib.getMetaValues());
+                destRole.attachParticipant(dest);
+                destRole.setMultiplicity(visitCardinality(type.getCardinality()));
+                destRole.setOrdering(type.isOrdered()?ch.ehi.uml1_4.foundation.datatypes.OrderingKind.ORDERED:ch.ehi.uml1_4.foundation.datatypes.OrderingKind.UNORDERED);
+                destRole.setIliAttributeIdx(attrIdx);
+                destRole.setPropExtended(attrib.getExtending()!=null);
+                assoc.addConnection(destRole);
+                ch.ehi.interlis.associations.RoleDef srcRole=new ch.ehi.interlis.associations.RoleDef();
+                srcRole.attachParticipant(thisclass);
+                srcRole.setName(thisclass.getName());
+                srcRole.setAggregation(ch.ehi.uml1_4.foundation.datatypes.AggregationKind.COMPOSITE);
+                srcRole.setIliAttributeKind(ch.ehi.interlis.associations.AssociationAsIliAttrKind.STRUCTURE);
+        		ch.ehi.uml1_4.implementation.UmlMultiplicityRange r=new ch.ehi.uml1_4.implementation.UmlMultiplicityRange();
+        		r.setLower(0);
+        		r.setUpper(1);
+        		ch.ehi.uml1_4.implementation.UmlMultiplicity m=new ch.ehi.uml1_4.implementation.UmlMultiplicity();
+        		m.addRange(r);
+        		srcRole.setMultiplicity(m);
+                assoc.addConnection(srcRole);
+                java.util.Iterator rIt=type.iteratorRestrictedTo();
+                while(rIt.hasNext()){
+                  destRole.addRestriction(findClassDef((Table)rIt.next()));
+                }
+                // TODO FunctionCall
+                // TODO AttributeValueUsage
+                thisclass.getNamespace().addOwnedElement(assoc);
+                return;
             }
-            // TODO FunctionCall
-            // TODO AttributeValueUsage
-            thisclass.getNamespace().addOwnedElement(assoc);
-            return;
     	}
     }else if(btype instanceof ReferenceType){
         // ReferenceAttribute
@@ -587,16 +595,34 @@ public class TransferFromIli2cMetamodel
     ch.ehi.interlis.attributes.AttrType battrtype=null;
 
     ch.ehi.uml1_4.foundation.datatypes.Multiplicity m=null;
-    if(unwrapMultiValueStructAttrs && btype instanceof CompositionType){
-    	// normales ili Attribut in Wrapper
-    	// ASSERT isMultiValueAttributeWrapper(btype)
-        ch.ehi.interlis.attributes.DomainAttribute attrtype=new ch.ehi.interlis.attributes.DomainAttribute();
-        battrtype=attrtype;
-        CompositionType ctype=(CompositionType)btype;
-        m=visitCardinality(ctype.getCardinality());
-        LocalAttribute wrappedValue=(LocalAttribute) ctype.getComponentType().getElement(LocalAttribute.class, TransferFromUmlMetamodel.VALUE_ATTR);
-        TypeAlias type=(TypeAlias)wrappedValue.getDomain();  // Type vom value Attribut innerhalb der Struktur
-        attrtype.attachDomainDef(findDomainDef(type.getAliasing()));
+    if(btype instanceof CompositionType){
+    	if(unwrapMultiValueStructAttrs && isMultiValueAttr){
+        	// normales ili Attribut in Wrapper
+        	// ASSERT isMultiValueAttributeWrapper(btype)
+            ch.ehi.interlis.attributes.DomainAttribute attrtype=new ch.ehi.interlis.attributes.DomainAttribute();
+            battrtype=attrtype;
+            CompositionType type=(CompositionType)btype;
+            attrdef.setOrdering(type.isOrdered() ?  OrderingKind.ORDERED : OrderingKind.UNORDERED);
+            m=visitCardinality(type.getCardinality());
+            LocalAttribute wrappedValue=(LocalAttribute) type.getComponentType().getElement(LocalAttribute.class, TransferFromUmlMetamodel.VALUE_ATTR);
+            TypeAlias wrappedValueType=(TypeAlias)wrappedValue.getDomain();  // Type vom value Attribut innerhalb der Struktur
+            attrtype.attachDomainDef(findDomainDef(wrappedValueType.getAliasing()));
+    	}else if(iliAttrsAsUmlAttrs){
+            CompositionType type=(CompositionType)btype;
+            ch.ehi.interlis.attributes.DomainAttribute attrtype=new ch.ehi.interlis.attributes.DomainAttribute();
+            battrtype=attrtype;
+            ch.ehi.interlis.domainsandconstants.basetypes.StructAttrType structAttrType=new ch.ehi.interlis.domainsandconstants.basetypes.StructAttrType();
+            attrdef.setOrdering(type.isOrdered() ?  OrderingKind.ORDERED : OrderingKind.UNORDERED);
+            if(type.getComponentType()!=ilibase.ANYSTRUCTURE){
+                structAttrType.attachParticipant(findClassDef(type.getComponentType()));
+            }
+            java.util.Iterator rIt=type.iteratorRestrictedTo();
+            while(rIt.hasNext()){
+            	structAttrType.addRestrictedTo(findClassDef((Table)rIt.next()));
+            }
+            attrtype.attachDirect(structAttrType);
+            m=visitCardinality(type.getCardinality());
+    	}
     }else{
     	// normales ili Attribut
         if (attrib instanceof LocalAttribute){
