@@ -1,6 +1,7 @@
 UML-Editor 3.6.0 (2014-11-xx) 
 ----------------------------------
 - unwrap multivalue struct attrs to normal uml attrs
+- iliimp: import interlis struct attrs as uml attrs
 
 UML-Editor 3.5.2 (2013-09-04) 
 ----------------------------------
